Fixed Missing Form Label

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <body>
     <div class="header">
         <h1>My Shopping Site</h1>
+        <label for="searchInput">Search for products:</label>
         <input type="text" id="searchInput" onkeyup="searchFunction()" placeholder="Search for products..">
     </div>
 
