Fixed Missing or uninformative page title

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
         .product-name { margin: 0; }
         .product-button { background-color: #007bff; color: white; padding: 10px 20px; text-align: center; text-decoration: none; display: inline-block; margin: 10px 2px; cursor: pointer; }
     </style>
+    <title>My Shopping Site - Online Store</title>
+    <!-- other elements in head -->
 </head>
 <body>
     <div class="header">
