--- a/index.html
+++ b/index.html
@@ -10,6 +10,15 @@
         .product-img { width: 100%; }
         .product-name { margin: 0; }
         .product-button { background-color: #007bff; color: white; padding: 10px 20px; text-align: center; text-decoration: none; display: inline-block; margin: 10px 2px; cursor: pointer; }
+        .product-button { 
+        background-color: #000000; /* black background */
+        color: #ffffff; /* white text */
+        padding: 10px 20px; 
+        text-align: center; 
+        text-decoration: none; 
+        display: inline-block; 
+        margin: 10px 2px; 
+        cursor: pointer; 
     </style>
     <title>My Shopping Site - Online Store</title>
     <!-- other elements in head -->
